--- a/latex/resume.tex
+++ b/latex/resume.tex
@@ -2,8 +2,6 @@
 \usepackage{parskip}
 \usepackage[margin=1in]{geometry}
 \usepackage{fontawesome}
-\usepackage{sectsty}
-\subsectionfont{\fontsize{11}{15}\selectfont}
 \usepackage{hyperref}
 \hypersetup{
     colorlinks=true,
@@ -25,9 +23,9 @@
 \section*{Work Experience}
 \subsection*{Research Associate, Northwestern University, January 2022 - Present}
 \begin{itemize}
-\item Investigates human-in-the-loop machine learning by deploying 3 prototype single-page applications designed to capture user responses to machine-generated document summarizations; built and designed websites with an Adobe-based team
-\item Improves PDF accessibility by building the interface to FormA11y, a form remediation tool to be utilized in a user study, in collaboration with teammates at the University of Maryland
-\item Became the 40th contributor on Definitely Typed by fixing 100 problems in 100 separate libraries through building automatic bug detection infrastructure
+\item Investigate human-in-the-loop machine learning by deploying 3 prototype single-page applications to capture user responses to machine-generated document summarization; built and designed websites with an Adobe-based team
+\item Improve PDF accessibility by building interface of FormA11y, a form remediation tool to be utilized in a user study, in collaboration with the University of Maryland
+\item 40th contributor on Definitely Typed, fixing 100 problems in 100 separate libraries by creating automatic bug detection infrastructure
 \end{itemize}
 \subsection*{Software Engineer I, Groundbreaker, December 2019 - August 2020}
 \begin{itemize}
@@ -35,28 +33,28 @@
 
 \item Managed website backend by maintaining over 200 serverless functions deployed to AWS written in Go and JavaScript through writing bug fixes and new features on an international team of four
 \end{itemize}
-\section*{Projects}
-\subsection*{Find Chicago News}
+\subsection*{Software Engineering Intern, Uptake, November 2019 - December 2019}
 \begin{itemize}
-  \item Built an automatic system for detecting newsworthy stories on social media by writing an algorithm to scrape 200 posts from Next Door and select the 10 most interesting ones; interdisciplinary collaboration with students in journalism and business
+  \item Contributed to product catalog by analyzing systems from over a dozen different teams and writing an interface with internal tools; agile workflow with sales engineering team and daily standups
 \end{itemize}
-\subsection*{AI Emails}
-\begin{itemize}
-  \item Wrote tool for emailing students struggling in course on AI and programming by analyzing feedback on over 2500 exercise submissions to autogenerate appropriate help messages
-\end{itemize}
+
 
 \section*{Technologies}
 \emph{Languages:} Fluent in TypeScript and JavaScript. 
 Shipped and maintained systems written in Python and Go. 
-Research experience with Racket (a LISP dialect) and Bash scripts
+Research experience with Racket (a LISP dialect) and shell scripting
 
 \emph{Frameworks:} Extensive work with React and its ecosystem, including CSS-in-JS tools like styled-components and state management systems like Redux. Familiarity with Express and FastAPI
 
 \emph{Tools:} Comfortable with Git, Linux, Emacs, and Vim. Familiar with CICD pipelines using GitHub actions; brief experience with infrastructure as code systems like Pulumi
 \section*{Education}
 
-\subsection*{MS Computer Science, Northwestern University, September 2020 - December 2021}
+\subsection*{MS Computer Science, Northwestern University, December 2021}
 \begin{itemize}
 \item 4.00 GPA; coursework focused on programming languages, AI, and agile development
+\end{itemize}
+\subsection*{BS Secondary Education, Northwestern University, June 2019}
+\begin{itemize}
+  \item 3.98 GPA, \emph{summa cum laude}, dean's list every semester
 \end{itemize}
 \end{document}
