Improve bullet point

--- a/latex/resume.tex
+++ b/latex/resume.tex
@@ -23,14 +23,13 @@
 \section*{Work Experience}
 \subsection*{Research Associate, Northwestern University, January 2022 - Present}
 \begin{itemize}
+\item 40th contributor on Definitely Typed, fixing 100 problems in 100 separate libraries by creating automatic bug detection infrastructure
 \item Investigate human-in-the-loop machine learning by deploying 3 prototype single-page applications to capture user responses to machine-generated document summarization; built and designed websites with an Adobe-based team
 \item Improve PDF accessibility by building interface of FormA11y, a form remediation tool to be utilized in a user study, in collaboration with the University of Maryland
-\item 40th contributor on Definitely Typed, fixing 100 problems in 100 separate libraries by creating automatic bug detection infrastructure
 \end{itemize}
 \subsection*{Software Engineer I, Groundbreaker, December 2019 - August 2020}
 \begin{itemize}
-\item Facilitated real-estate investments by contributing to the user interface of a purpose-built platform that managed millions of dollars worth of assets under management; deployed improvements to 200,000 line React codebase 2-3 times daily
-
+\item Refactored build process of a 200,000 line React codebase to speed up the CICD pipeline by 50\%; deployed improvements to UI code 2-3 times daily
 \item Managed website backend by maintaining over 200 serverless functions deployed to AWS written in Go and JavaScript through writing bug fixes and new features on an international team of four
 \end{itemize}
 \subsection*{Software Engineering Intern, Uptake, November 2019 - December 2019}
