--- a/latex/resume.tex
+++ b/latex/resume.tex
@@ -29,7 +29,7 @@
 \end{itemize}
 \subsection*{Software Engineer I, Groundbreaker, December 2019 - August 2020}
 \begin{itemize}
-\item Refactored build process of a 200,000 line React codebase to speed up the CICD pipeline by 50\%; deployed improvements to UI code 2-3 times daily
+\item Refactored build process of a 200,000 line React codebase to speed up CICD pipeline by 50\%; deployed improvements to UI code 2-3 times daily
 \item Managed website backend by maintaining over 200 serverless functions deployed to AWS written in Go and JavaScript through writing bug fixes and new features on an international team of four
 \end{itemize}
 \subsection*{Software Engineering Intern, Uptake, November 2019 - December 2019}
