Fix resume title

--- a/latex/resume.tex
+++ b/latex/resume.tex
@@ -8,7 +8,7 @@
     linkcolor=blue,
     filecolor=magenta,      
     urlcolor=blue,
-    pdftitle={Overleaf Example},
+    pdftitle={Joshua Hoeflich's Resume},
     pdfpagemode=FullScreen,
     }
 
