--- a/latex/resume.tex
+++ b/latex/resume.tex
@@ -21,11 +21,11 @@
 
 {\normalsize Evanston, IL $\cdot$ 847-513-1894}\hfill \href{https://www.linkedin.com/in/josh-hoeflich/}{{\small \faLinkedinSquare}~josh-hoeflich} $\cdot$ \href{https://joshuaharry.com}{{\small \faGlobe}~joshuaharry.com}
 \section*{Work Experience}
-\subsection*{Research Associate, Northwestern University, January 2022 - Present}
+\subsection*{Research Associate, Northwestern University, June 2021 - June 2022}
 \begin{itemize}
 \item 40th contributor on Definitely Typed, fixing 100 problems in 100 separate libraries by creating automatic bug detection infrastructure
-\item Investigate human-in-the-loop machine learning by deploying 3 prototype single-page applications to capture user responses to machine-generated document summarization; built and designed websites with an Adobe-based team
-\item Improve PDF accessibility by building interface of FormA11y, a form remediation tool to be utilized in a user study, in collaboration with the University of Maryland
+\item Investigated human-in-the-loop machine learning by deploying 3 prototype single-page applications to capture user responses to machine-generated document summarization; built and designed websites with an Adobe-based team
+\item Improved PDF accessibility by building interface of FormA11y, a form remediation tool to be utilized in a user study, in collaboration with the University of Maryland
 \end{itemize}
 \subsection*{Software Engineer I, Groundbreaker, December 2019 - August 2020}
 \begin{itemize}
